cursive-bootstrap/tests/ui/E-CON/E-CON-0095.cursive
// RUN: compile-fail
// DIAG: E-CON-0095
// SPEC: 8.9
// DESC: speculative without write modifier

record Counter {
    value: i32
}

procedure speculative_read(c: shared Counter) -> () {
    # speculative c {  //~ ERROR E-CON-0095: speculative without write
        let x: i32 = c.value
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
